--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,11 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.d-max:spots-dialog:0.7@aar'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
