--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ViewExercise"></activity>
+        <activity android:name=".SettingPage"></activity>
+        <activity android:name=".ViewExercise" />
         <activity android:name=".ListExercise" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
