--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     implementation 'com.github.jd-alexander:android-flat-button:v1.1'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.github.prolificinteractive:material-calendarview:v1.4.3'
+    implementation 'me.zhanghai.android.materialprogressbar:library:1.4.1'
 }
